[Feat] Slack Bot 활용하여 슬랙 메시지 구현 및 해당 의존성 추가
core 내부에 util 패키지 존재하도록 패키지 경로 수정